Fix alpine-node-16 image

--- a/alpine-node-16/Dockerfile
+++ b/alpine-node-16/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:16-alpine as node
+WORKDIR /node
 
-FROM google/cloud-sdk:latest
-COPY --from=node . .
+FROM google/cloud-sdk:alpine
+WORKDIR /root/
+COPY --from=node ./node .
