--- a/alpine-node-16/Dockerfile
+++ b/alpine-node-16/Dockerfile
@@ -1,6 +1,4 @@
 FROM node:16-alpine as node
-WORKDIR /node
 
 FROM google/cloud-sdk:alpine
-WORKDIR /root/
-COPY --from=node ./node .
+COPY --from=node . .
