--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,9 @@ name: Docker Image CI
 on:
   push:
     branches: ["master"]
+    paths:
+      - "Dockerfile"
+      - "node_version.sh"
 
 jobs:
   build:
